--- a/client/src/app/features/shop/product-item/product-item.component.html
+++ b/client/src/app/features/shop/product-item/product-item.component.html
@@ -6,7 +6,7 @@
       <p class="fdont-light">{{product.price | currency}}</p>
     </mat-card-content>
     <mat-card-actions>
-      <button mat-stroked-button class="w-full">
+      <button mat-stroked-button class="w-full" (click)="cartService.addItemToCart(product)">
           <mat-icon>add_shopping_cart</mat-icon>
           Add to cart
       </button>
